--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^7.17.1",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cookie-parser": "~1.4.4",
@@ -18,6 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "morgan": "~1.9.1",
-    "nodemon": "^3.1.10"
+    "nodemailer": "^7.0.7",
+    "nodemon": "^3.1.10",
+    "yup": "^1.7.1"
   }
 }
