--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "~1.9.1",
     "nodemailer": "^7.0.7",
     "nodemon": "^3.1.10",
+    "sharp": "^0.34.5",
     "yup": "^1.7.1"
   }
 }
