models/cards et routes/cards pour mise en place Slate + routes auth et upload pour pb espace et accent dans les nom prenom

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "migrate:cards-content": "node ./scripts/migrate-cards-content.js"
   },
   "dependencies": {
     "@google-cloud/storage": "^7.17.1",
